--- a/UserService/src/main/resources/static/index.html
+++ b/UserService/src/main/resources/static/index.html
@@ -21,7 +21,7 @@
 
         <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
           <div class="w3-display-middle">
-            <h1 class="w3-jumbo w3-animate-top">USER SERVICES</h1>
+            <h1 class="w3-jumbo w3-animate-top">USER SERVICE</h1>
             <hr class="w3-border-grey" style="margin:auto;width:40%">
           </div>
         </div>
